--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,24 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+#google-maps{
+  position: relative;
+}
+
+#gmap{
+  height: 100%;
+  width: 100%;
+  border: 0;
+  display: flex;
+  align-items: center;
+}
+
+#img img{
+  border-radius: 50%;
+  border: 3px solid black;
+}
+
+
 /*
 font-family: 'Montserrat', sans-serif;
 font-family: 'Open Sans', sans-serif;
