--- a/src/App.css
+++ b/src/App.css
@@ -118,10 +118,10 @@
 
 .bg {
   animation:slide 3s ease-in-out infinite alternate;
-  background-image: linear-gradient(-60deg, #6c3 50%, #09f 50%);
+  background-image: linear-gradient(-60deg, #005b96 50%, #011f4b 50%);
   bottom:0;
   left:-50%;
-  opacity:.5;
+  opacity:.4;
   position:fixed;
   right:-50%;
   top:0;
